# load_balancer

./: .gitignore  notes.rst  readme.rst
backend/src/: main.rs
cpp/: .clang-format  .clangd  CMakeLists.txt  readme.rst  urls.txt
cpp/all/: CMakeLists.txt
cpp/include/: backend.h  health.h  least_response_load_balancer.h  load_balancer.h  round_robin_load_balancer.h
cpp/source/: backend.cpp  least_response_load_balancer.cpp  main.cpp  round_robin_load_balancer.cpp
cpp/test/: CMakeLists.txt
cpp/test/end_to_end_tests/: test  test.cpp  test_dynamic_lb.sh  test_simple_lb.sh
cpp/test/source/: test_simple_load_balancer.cpp
load_balancer/: Cargo.toml
load_balancer/src/: main.rs
rust/: Cargo.toml  urls.txt
rust/backend/: Cargo.toml
rust/backend/src/: main.rs
rust/load_balancer/: Cargo.toml
rust/load_balancer/src/: as_any.rs  backend.rs  continent.rs  geo_backend.rs  health.rs  internal_error.rs  least_response_load_balancer.rs  load_balancer.rs  main.rs  min_heap_item.rs  round_robin_load_balancer.rs  simple_backend.rs  simple_load_balancer.rs
rust/tests/: common.sh  test_dynamic_lb.sh  test_simple_lb.sh
slides/: slides.key
slides/code_examples/: readme.rst
slides/code_examples/cpp_examples/: Makefile
slides/code_examples/cpp_examples/src/: coroutines_1.cpp  coroutines_2.cpp  data_race.cpp  data_race_sol.cpp  immutable_mutable_aliasing.cpp  mutex_lock.cpp  order_evaluation.cpp  semaphore.cpp  thread.cpp
slides/code_examples/rust_examples/: Cargo.toml
slides/images/: .$send_sync.drawio.bkp  load_balancer.drawio  send_sync.drawio
